<resources>
    <string name="app_name">FirstApplication</string>
    <string name="todo">TODO</string>
    <string name="name_of_person_info_access">个人信息管理</string>
    <string name="name_of_gain_all_blog">获取全部公开博文</string>
    <string name="name_of_look_all_blog">查看全部公开博文</string>
    <string name="name_of_gain_personal_blog">获取个人发布的博文</string>
    <string name="name_of_look_personal_blog">查看个人发布的博文</string>
    <string name="name_username">用户名：</string>
    <string name="name_password">密 码：</string>
    <string name="name_login">登录</string>
    <string name="name_register">注册</string>
    <string name="name_button_exchange_password">提交修改后的密码</string>
    <string name="name_of_publish_blog">发布博文</string>
    <string name="name_of_addTitle">请添加博文博文标题</string>
    <string name="name_of_add_summary">请填写摘要</string>
    <string name="name_of_add_content">请添加正文</string>
    <string name="name_of_publish">发布博文</string>
    <string name="comment">评论</string>
    <string name="input_emial">邮箱：</string>
    <string name="input_user">用户:</string>
    <string name="submit_register">注册表提交</string>
    <string name="input_password">密码:</string>
    <string name="input_password_agian">再次输入密码:</string>
    <string name="submit_comment">发表评论</string>
    <string name="exit">退出</string>
</resources>