<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/email"
        android:layout_width="61dp"
        android:layout_height="31dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="62dp"
        android:text="@string/input_emial"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/username"
        android:layout_width="72dp"
        android:layout_height="38dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/input_user"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="220dp"
        android:gravity="center"
        android:text="@string/submit_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAddress" />

    <EditText
        android:id="@+id/editPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAddress"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/password"
        android:layout_width="94dp"
        android:layout_height="42dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/input_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/editPassword1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/editPersonName"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/passwordAgain"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/input_password_agian"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/editPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/passwordAgain"
        app:layout_constraintTop_toBottomOf="@+id/edittPassword"
        tools:ignore="LabelFor,SpeakableTextPresentCheck"
        android:autofillHints="no" />
</androidx.constraintlayout.widget.ConstraintLayout>